--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,10 @@ body {
   }
 }
 
+.btn {
+  @apply text-white bg-black rounded-md h-10 px-4 py-2 text-sm;
+}
+
 .no-focus {
   @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
 }
@@ -33,4 +37,46 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.video_filter {
+  filter: grayscale(100%);
+}
+
+@keyframes hoverAnimation {
+  0% {
+    z-index: initial;
+  }
+  100% {
+    z-index: 10;
+  }
+}
+
+.f_image_1 {
+  @apply absolute bottom-0 right-3 w-36 md:right-6 md:w-60;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
+}
+
+.f_image_2 {
+  @apply absolute bottom-0 left-3 w-36 md:left-6 md:w-60;
+}
+
+/* Styl pro hover */
+.f_image_1:hover {
+  animation-name: hoverAnimation;
+}
+
+.card_gradient {
+  background: #000000;
+  background: -webkit-linear-gradient(
+    0deg,
+    #000000 0%,
+    rgba(188, 71, 255, 0) 100%
+  );
+  background: linear-gradient(0deg, #000000 0%, rgba(188, 71, 255, 0) 100%);
+}
+
+.sheet {
+  clip-path: polygon(7% 0%, 100% 0%, 93% 100%, 0% 100%);
 }
