--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,12 @@ body {
   background: linear-gradient(0deg, #000000 30%, rgba(188, 71, 255, 0) 100%);
 }
 
+.fight_gradient {
+  background: #afafaf;
+  background: -webkit-linear-gradient(0deg, #afafaf 0%, #dfdfdf 100%);
+  background: linear-gradient(0deg, #afafaf 0%, #dfdfdf 100%);
+}
+
 .sheet {
   clip-path: polygon(7% 0%, 100% 0%, 93% 100%, 0% 100%);
 }
